# opencv_dl_book_cpp

./: LICENSE  README.md
ch3/3.1/: README.md
ch3/3.1/blank_color_image/: CMakeLists.txt  blank_color_image.cpp
ch3/3.1/blank_gray_image/: CMakeLists.txt  blank_gray_image.cpp
ch3/3.1/change_pixel_value/: CMakeLists.txt  change_pixel_value.cpp
ch3/3.1/image_roi/: CMakeLists.txt  image_roi.cpp
ch3/3.1/image_size/: CMakeLists.txt  image_size.cpp
ch3/3.1/read_pixel_value/: CMakeLists.txt  read_pixel_value.cpp
